<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@drawable/home_top_background"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/padding_horizontal"
                    android:paddingTop="25dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/home_location"
                        android:textColor="@color/lighterdark"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Uchkurgan"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/padding_horizontal">

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="0dp"
                        android:layout_height="52dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/search_background"
                        android:drawableStart="@drawable/search"
                        android:drawablePadding="16dp"
                        android:drawableTint="@color/white"
                        android:hint="@string/search_coffee"
                        android:inputType="text"
                        android:padding="15dp"
                        android:textColor="@color/pinklighter"
                        android:textColorHint="@color/lighterdark" />

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:background="@drawable/onboarding_button_background"
                        app:srcCompat="@drawable/settings" />

                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginHorizontal="@dimen/padding_horizontal"
                android:layout_marginTop="-100dp"
                android:background="@drawable/banner_background">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:translationZ="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/promo" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/coffemain" />

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="25dp"
                    android:text="@string/banner_text"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:translationZ="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding_horizontal">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tablayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabSelectedTextColor="@color/white"
                    app:tabIndicatorAnimationMode="elastic"
                    app:tabIndicatorHeight="2dp"
                    app:tabGravity="fill"
                    app:tabIndicatorGravity="stretch"
                    app:tabIndicator="@drawable/onboarding_button_background"
                    app:tabIndicatorColor="@color/orange"
                    android:layout_marginVertical="5dp"
                    app:tabMode="scrollable" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/coffesViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>